duck/test/fail/arity.duck
main = exit 0

_ = 1 :: Void
